[package]
name = "dhcraftrs"
version = "0.1.0"
edition = "2021"
default-run = "dhcraftrs"

#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3

#[profile.release]
#strip = true #automatically strip symbols from binary
#opt-level = "s" # optimize for size
#lto = true #enabl link time optimizations
#codegen-units = 1 # maximize size reducation optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dhcraftrs"
path = "src/bin/game.rs"

#[[bin]]
#name = "game"
#path = "src/bin/game.rs"

#[[bin]]
#name = "editor"
#path = "src/bin/editor.rs"

[[bin]]
name = "fpsgame"
path = "src/bin/fpsgame.rs"

[[bin]]
name = "network"
path = "src/bin/network.rs"

[[bin]]
name = "testscene"
path = "src/bin/testscene.rs"

[[bin]]
name = "launcher"
path = "src/bin/launcher.rs"

[[bin]]
name = "testapp"
path = "src/bin/testapp.rs"

[[bin]]
name = "testdata"
path = "src/bin/testdata.rs"

[[bin]]
name = "testdataplayer"
path = "src/bin/testdataplayer.rs"

[dependencies]
moonshine-save = {version = "0.2.3"}
bevy = { version = "0.10.1", features = [
  "bevy_ui",
  "bmp", 
  "jpeg", 
  "wav", 
  "zlib", 
  "bevy_animation"
]}
clap = { version = "4.1.10", features = ["derive"]}
bevy_console = "0.7.0"
#bevy_mod_picking = "0.13.0"
#bevy_rapier3d = "0.21.0"
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20"
bevy_flycam = {version ="0.10"}
bevy_asset_loader = {version ="0.16"}
#bevy_transform_gizmo = "0.6.0"
bevy_renet = "0.0.8"
#egui = "0.22.0"
eframe = { version = "0.22", default-features = false, features = [
  "__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
bevy_pkv = "0.7.0"
bincode = "1.3.3"
#tracing-subscriber = "0.3"
renet = {version = "0.0.12", features = ["bevy"]}
