[package]
name = "dhcraftrs"
version = "0.1.0"
edition = "2021"
default-run = "dhcraftrs"

resolver = "2" # path reslove packages

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#strip = true #automatically strip symbols from binary
#opt-level = "s" # optimize for size
#lto = true #enabl link time optimizations
#codegen-units = 1 # maximize size reducation optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dhcraftrs"
path = "src/bin/game.rs"

#[[bin]]
#name = "game"
#path = "src/bin/game.rs"

#[[bin]]
#name = "editor"
#path = "src/bin/editor.rs"

#[[bin]]
#name = "network"
#path = "src/bin/network.rs"

#[[bin]]
#name = "launcher"
#path = "src/bin/launcher.rs"

#[[example]]
#name = "fpsgame"
#path = "src/example/fpsgame.rs"

#[[example]]
#name = "testscene"
#path = "src/example/testscene.rs"

#[[example]]
#name = "testapp"
#path = "src/example/testapp.rs"

#[[example]]
#name = "testdata"
#path = "src/example/testdata.rs"

#[[example]]
#name = "testdataplayer"
#path = "src/example/testdataplayer.rs"

#[[example]]
#name = "physics3d"
#path = "src/example/physics3d.rs"

#[[example]]
#name = "webgui"
#path = "src/example/webgui.rs"

#[[example]]
#name = "pick_event"
#path = "src/example/pick_event.rs"

[[example]]
name = "menu_test"
path = "src/example/menu_test.rs"

[dependencies]

bevy = { version = "0.11.0", features = [
  "bevy_ui",
  "bmp", 
  "jpeg", 
  "wav", 
  "zlib", 
  "bevy_animation",
  "dynamic_linking"
]}

#bevy_console = "0.7.0"
bevy_rapier3d = {version="0.22.0", features = [ "simd-stable", "debug-render-3d" ] }
#bevy-inspector-egui = "0.18.3"
bevy_asset_loader = {version ="0.17.0"}

serde = { version = "1", features = ["derive"] }

bincode = "1.3.3"
renet = {version = "0.0.13", features = ["bevy"]}
bevy_renet = "0.0.9"
bevy_mod_raycast = "0.9.0"

winit = "0.28.6"
image = "0.24.6"
#clap = { version = "4.1.10", features = ["derive"]}
#moonshine-save = {version = "0.2.3"}
#bevy_transform_gizmo = "0.6.0"
#bevy_pkv = "0.7.0"
#bevy_flycam = {version ="0.10"}

#bevy_egui = "0.20"
#egui = "0.22.0"
#eframe = { version = "0.22", default-features = false, features = [
  #"__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
  #"default_fonts", # Embed the default egui fonts.
  #"glow",          # Use the glow rendering backend. Alternative: "wgpu".
  #"persistence",   # Enable restoring app state when restarting the app.
#] }

#bevy_mod_picking = "0.13.0"
#bevy_svg = "0.10.1"
#reqwest = { version ="0.11.18", features = ["blocking", "json"] }
#tracing-subscriber = "0.3"