[package]
name = "dhcraftrs"
version = "0.1.0"
edition = "2021"
default-run = "dhcraftrs"
#default-run = "egui_network"

resolver = "2" # path reslove packages

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#strip = true #automatically strip symbols from binary
#opt-level = "s" # optimize for size
#lto = true #enabl link time optimizations
#codegen-units = 1 # maximize size reducation optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dhcraftrs"
path = "src/bin/game.rs"

#[[bin]]
#name = "egui_network"
#path = "src/bin/egui_network.rs"

#[[bin]]
#name = "game"
#path = "src/bin/game.rs"

#[[bin]]
#name = "editor"
#path = "src/bin/editor.rs"

#[[bin]]
#name = "network"
#path = "src/bin/network.rs"

#[[bin]]
#name = "launcher"
#path = "src/bin/launcher.rs"

#[[example]]
#name = "fpsgame"
#path = "src/example/fpsgame.rs"

#[[example]]
#name = "testscene"
#path = "src/example/testscene.rs"

#[[example]]
#name = "testapp"
#path = "src/example/testapp.rs"

#[[example]]
#name = "testdata"
#path = "src/example/testdata.rs"

#[[example]]
#name = "testdataplayer"
#path = "src/example/testdataplayer.rs"

#[[example]]
#name = "physics3d"
#path = "src/example/physics3d.rs"

#[[example]]
#name = "webgui"
#path = "src/example/webgui.rs"

#[[example]]
#name = "scene_save_load"
#path = "src/example/scene_save_load.rs"

#[[example]]
#name = "menu_test"
#path = "src/example/menu_test.rs"

#[[example]]
#name = "mouse_picking"
#path = "src/example/mouse_picking.rs"

#[[example]]
#name = "simplified_mesh"
#path = "src/example/simplified_mesh.rs"

#[[example]]
#name = "simple_raycast"
#path = "src/example/simple_raycast.rs"

#[[example]]
#name = "reflecting_laser"
#path = "src/example/reflecting_laser.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bevy = { version = "0.13.0", features = [
  #"bevy_ui",
  #"bmp", 
  #"jpeg", 
  #"wav", 
  #"zlib", 
  #"bevy_animation",
  #"dynamic_linking"
]}
bevy_asset_loader = {version ="0.20.0"}
bevy_rapier3d = {version="0.25.0", features = [ "simd-stable", "debug-render-3d" ] }
#bincode = "1.3.3"
#renet = {version = "0.0.15", features = ["bevy"]}
#bevy_renet = "0.0.11"
#bevy_mod_raycast = {version = "0.14.0", git = "https://github.com/aevyrie/bevy_mod_raycast.git"}
#bevy_mod_raycast = {version = "0.16.0"}
#bevy-inspector-egui = "0.18.3"
#bevy_console = "0.7.0"
#eframe = { version = "0.26", default-features = false, features = [
  #"__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
  #"default_fonts", # Embed the default egui fonts.
  #"glow",          # Use the glow rendering backend. Alternative: "wgpu".
  #"persistence",   # Enable restoring app state when restarting the app.
#]}
winit = "0.29"
image = "0.24"
#bevy_egui = "0.25"
#bevy_svg = "0.10.1"

#bevy_transform_gizmo = "0.6.0"
#bevy_pkv = "0.7.0"
#bevy_mod_picking = "0.13.0"
#bevy_flycam = {version ="0.10"}

#clap = { version = "4.1.10", features = ["derive"]}
#moonshine-save = {version = "0.2.3"}
#egui = "0.22.0"
#reqwest = { version ="0.11.18", features = ["blocking", "json"] }
#tracing-subscriber = "0.3"